[package]
name = "ex1_mysql_curd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# anyhow = "1.0.34"
# futures = "0.3.15"
# serde = { version = "1.0.126", features = ["derive"] }
# serde_json = "1.0.64"
# sqlx = { version = "0.5.13", features = ["mysql", 'runtime-tokio-rustls'] }
# tokio = { version="1", features=["full"]}
# uuid = { version = "1", features = ["v4", "serde"] }
# dotenv="0.15.0"
# async-std = { version = "1.8.0", features = [ "attributes" ] }
# paw = "1.0"
# structopt = { version = "0.3", features = [ "paw" ] }
# sqlx = { version = "0.3.5", features = ["mysql"] }
# serde = "1.0.117"
# serde_json = "1.0"
# uuid = { version = "0.8.1", features = ["serde", "v4"] }
# mini-redis = "0.4"
# tokio = { version = "1", features = ["full"] }

# Tokio:
sqlx = { version = "0.5", features = [ "runtime-tokio-native-tls" , "mysql" ] }
tokio = { version = "1", features = ["full"] }